--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jtrack's blog
-email: alphajerboa@jtrack.fr
+email: blog@jtrack.fr
 description: >- # this means to ignore newlines until "baseurl:"
   System, network, security articles...
 baseurl: "" # the subpath of your site, e.g. /blog
