--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+license:
+  name: "CC BY 4.0"
+  url: "https://creativecommons.org/licenses/by/4.0/"
+  
+copyright: "© 2025 alphajerboa"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
