--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@
 
 title: Jtrack's blog
 email: blog@jtrack.fr
-author:
-  name: "alphajerboa"
-  avatar: "/assets/avatar.jpeg"
+author: "alphajerboa"
+avatar: "/assets/avatar.jpeg"
 description: >- # this means to ignore newlines until "baseurl:"
   System, network, security articles...
 baseurl: "" # the subpath of your site, e.g. /blog
