--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alphajerboa
 
 # Build settings
-#theme: minima
-remote_theme: pages-themes/minimal@v0.2.0
+theme: jekyll-theme-minimal
+#remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
+#  - jekyll-remote-theme
 
 license:
   name: "CC BY 4.0"
