--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: Jtrack's blog
 email: blog@jtrack.fr
 author: "alphajerboa"
 avatar: "/assets/avatar.jpeg"
+logo: "/assets/avatar.jpeg"
 description: >- # this means to ignore newlines until "baseurl:"
   System, network, security articles...
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -33,6 +34,7 @@ theme: jekyll-theme-minimal
 #remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 #  - jekyll-remote-theme
 
 license:
