--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 #  - jekyll-remote-theme
 
 license:
