--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  alphajerboa
 
 # Build settings
 theme: jekyll-theme-minimal
-#remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/minimal
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
