--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alphajerboa
 
 # Build settings
-#theme: minima
-theme: jekyll-theme-minimal
+theme: minima
+#theme: jekyll-theme-minimal
 #remote_theme: pages-themes/minimal
 plugins:
   - jekyll-feed
