--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jtrack's blog
-email: blog@jtrack.fr
-author: "alphajerboa"
+author:
+  name: "alphajerboa"
+  email: "blog@jtrack.fr"
+
 avatar: "/assets/avatar.jpeg"
 logo: "/assets/avatar.jpeg"
 description: >- # this means to ignore newlines until "baseurl:"
@@ -33,6 +35,8 @@ github_username:  alphajerboa
 theme: minima
 minima:
   skin: dark
+  hide_site_feed_link: true 
+  show_excerpts: true
 #theme: jekyll-theme-minimal
 #remote_theme: pages-themes/minimal
 plugins:
