--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,16 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alphajerboa
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-remote-theme
 minima:
   skin: dark
   hide_site_feed_link: true 
   show_excerpts: true
-#theme: jekyll-theme-minimal
-#remote_theme: pages-themes/minimal
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-#  - jekyll-remote-theme
 
 license:
   name: "CC BY 4.0"
