--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ github_username:  alphajerboa
 
 # Build settings
 #theme: minima
-#remote_theme: jekyll/minima
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: jekyll/minima
+#remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
